src/index.css
@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap");
@import "tailwindcss";
@import "tw-animate-css";
@import "shadcn/tailwind.css";
@import "@fontsource-variable/inter";
@import "tailwind-scrollbar-hide/v4";

@custom-variant dark (&:is(.dark *));

@theme inline {
  --font-heading: var(--font-sans);
  --font-sans: "Inter Variable", sans-serif;
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --color-foreground: var(--foreground);
  --color-background: var(--background);
  --radius-sm: calc(var(--radius) * 0.6);
  --radius-md: calc(var(--radius) * 0.8);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) * 2);
  --radius-2xl: calc(var(--radius) * 3);
  --radius-3xl: calc(var(--radius) * 4);
  --radius-4xl: calc(var(--radius) * 5);

  --color-01: #7c5dfa;
  --color-02: #9277ff;
  --color-03: #1e2139;
  --color-04: #252945;
  --color-05: #dfe3fa;
  --color-06: #888eb0;
  --color-07: #7e88c3;
  --color-08: #0c0e16;
  --color-09: #ec5757;
  --color-10: #ff9797;
  --color-11: #f8f8fb;
  --color-12: #141625;

  --color-invoice-card-bg: var(--invoice-card-bg);
  --color-invoice-due-text: var(--invoice-due-text);
  --color-invoice-name: var(--invoice-name);
  --color-invoice-count: var(--invoice-count);
  --color-invoice-nothing-text: var(--nothing-here);
  --color-invoice-new-button: var(--new-button);
  --color-status-text: var(--status-text);
  --color-details-text: var(--details-text);
  --color-price-text: var(--price-text);
  --color-price-ctn: var(--price-ctn);
  --color-total-ctn: var(--total-ctn);
  --color-modify-ctn: var(--modify-ctn);

  --color-label-text: var(--label-text);

  --font-spartan: "League Spartan";
}

:root {
  --background: #f8f8fb;
  --foreground: #0c0e16;
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.145 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.145 0 0);
  --primary: oklch(0.205 0 0);
  --primary-foreground: oklch(0.985 0 0);
  --secondary: oklch(0.97 0 0);
  --secondary-foreground: oklch(0.205 0 0);
  --muted: oklch(0.97 0 0);
  --muted-foreground: #7c5dfa;
  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(0.205 0 0);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.922 0 0);
  --input: oklch(0.922 0 0);
  --ring: oklch(0.708 0 0);
  --chart-1: oklch(0.87 0 0);
  --chart-2: oklch(0.556 0 0);
  --chart-3: oklch(0.439 0 0);
  --chart-4: oklch(0.371 0 0);
  --chart-5: oklch(0.269 0 0);
  --radius: 0.25rem;
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.205 0 0);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0);

  --invoice-card-bg: #ffffff;
  --invoice-due-text: var(--color-06);
  --invoice-name: #858bb2;
  --invoice-count: var(--color-06);
  --nothing-here: var(--color-08);
  --new-button: var(--color-06);
  --status-text: #858bb2;
  --details-text: var(--color-07);
  --price-text: var(--color-07);
  --price-ctn: #f9fafe;
  --total-ctn: #373b53;
  --modify-ctn: #ffffff;

  --label-text: var(--color-07);
}

.dark {
  --background: #141625;
  --foreground: #ffffff;
  --card: oklch(0.205 0 0);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.205 0 0);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.922 0 0);
  --primary-foreground: oklch(0.205 0 0);
  --secondary: oklch(0.269 0 0);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.269 0 0);
  --muted-foreground: #7c5dfa;
  --accent: oklch(0.269 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.87 0 0);
  --chart-2: oklch(0.556 0 0);
  --chart-3: oklch(0.439 0 0);
  --chart-4: oklch(0.371 0 0);
  --chart-5: oklch(0.269 0 0);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);

  --invoice-card-bg: var(--color-03);
  --invoice-due-text: var(--color-05);
  --invoice-name: #ffffff;
  --invoice-count: var(--color-05);
  --nothing-here: #ffffff;
  --new-button: var(--color-05);
  --status-text: var(--color-05);
  --details-text: var(--color-05);
  --price-text: var(--color-06);
  --price-ctn: var(--color-04);
  --total-ctn: var(--color-08);
  --modify-ctn: var(--color-03);

  --label-text: var(--color-06);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
  html {
    @apply font-spartan;
  }

  .text-heading-l {
    @apply text-[36px] leading-[33px] font-bold tracking-[-1.13px];
  }

  .text-heading-m {
    @apply text-[24px] leading-5.5 font-bold tracking-[-0.75px];
  }

  .text-heading-s {
    @apply text-[15px] leading-6 font-bold tracking-[-0.25px];
  }

  .variant-heading-s {
    @apply text-[15px] leading-3.75 font-bold tracking-[-0.25px];
  }

  .body {
    @apply text-[13px] leading-4.5 font-medium tracking-[-0.1px];
  }

  .body-variant {
    @apply text-[13px] leading-3.75 font-medium tracking-[-0.1px];
  }

  .select-button {
    @apply gap-3 border-none bg-none p-0;
  }

  .card-shadow {
    box-shadow: 0px 10px 10px -10px rgba(72, 84, 159, 0.100397);
  }

  .dropdown-shadow {
    box-shadow: 0px 10px 20px rgba(72, 84, 159, 0.25);
  }

  .empty-bg {
    background: linear-gradient(
      180deg,
      rgba(0, 0, 0, 0.0001) 0%,
      rgba(0, 0, 0, 0.1) 100%
    );
  }

  .custom-scrollbar::-webkit-scrollbar {
    width: 8px;
  }

  .custom-scrollbar::-webkit-scrollbar-track {
    background: transparent;
  }

  .custom-scrollbar::-webkit-scrollbar-thumb {
    background-color: #dfe3fa;
    border-radius: 4px;
  }

  .custom-scrollbar::-webkit-scrollbar-button {
    display: none;
  }
}

.form-input {
  @apply h-12 w-full rounded-lg border border-05 px-5 outline-none focus:border focus:border-02 dark:border-04 dark:bg-03 dark:focus:border dark:focus:border-04;
}

.select-item {
  @apply h-[45px] cursor-pointer hover:text-01 dark:hover:text-02 dark:data-[highlighted]:bg-[#373B53];
}

.select-ctn {
  @apply dark:bg-04;
}

.form-input-error {
  @apply border-09 dark:border-09;
}

.modal-overlay {
  animation: fadeIn 0.2s ease-out;
}

.modal-content {
  animation: slideIn 0.25s ease-out;
}

.modal-content-center {
  animation: scaleIn 0.2s ease-out;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes slideIn {
  from {
    transform: translateX(-100%);
  }
  to {
    transform: translateX(0);
  }
}

@keyframes scaleIn {
  from {
    opacity: 0;
    transform: scale(0.95);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}

.select-test {
  @apply dark:hover:bg-02;
}

